# user-activity-analysi-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: project.md  prompts.md
.claude/context/: project_ai.md  project_overview.md
.claude/context/ez_connect_oracle_documentation/: ez_oracle_connect_docs.md  flow_ez_connect_oracle.md  readme.md  sequence_ez_connect_oracle.md
.claude/instructions/: step_0.md  step_1.md  step_10.md  step_11.md  step_2.md  step_3.md  step_4.md  step_5.md  step_6.md  step_7.md  step_8.md  step_9.md
.claude/tasks/: implement_config_manager.md
configs/: app_settings.yaml  databases.yaml
docs/: CONTRIBUTING.md  architecture.md  user_guide.md
queries/: get_all_email_changes.sql  get_all_password_changes.sql  get_all_phone_changes.sql  get_token_changes.sql
src/: test_connection.py  validate_setup.py
src/client_activity_monitor/: main.py
src/client_activity_monitor/common/: __init__.py  clipboard_utils.py  error_handler.py  exceptions.py  validators.py
src/client_activity_monitor/controller/: main_controller.py
src/client_activity_monitor/model/: config_manager.py
src/client_activity_monitor/model/integrations/: __init__.py  email_service.py  onenote_service.py
src/client_activity_monitor/model/repositories/: ez_connect_oracle.py  query_repository.py
src/client_activity_monitor/model/services/: __init__.py  (+3 more)
src/client_activity_monitor/view/: __init__.py  app_ui.py
tests/integration/: test_end_to_end.py
tests/unit/: test_query_repository.py  test_validators.py
(+5 files in other folders)
