[tool.poetry]
name = "client-activity-monitor"
version = "0.1.0"
description = "Monitor and analyze client activity in Oracle databases"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "client_activity_monitor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
oracledb = "^2.0.0"
pydantic = "^2.0.0"
customtkinter = "^5.0.0"
pandas = "^2.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"